# sifr

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: __init__.py  answer_sheet.py  config.py  db.py  helpers.py  korrektur_utils.py  main_app.py  review_state.py  sidebar_panels.py  utils.py  🖎_Korrektur.py
app/pages/: 1_🔢_Notenübersicht.py  2_✅_Korrektionen_überprüfen.py  2_✅_Korrekturen_überprüfen.py  3_🛠️_Fehlercodes_verwalten.py  4_⚙️_Daten_und_Einstellungen.py  marks_editor.py
test/: conftest.py  test_answer_sheet.py  test_app.py  test_db_helpers.py  test_korrektur_utils.py  test_utils.py
