[project]
name = "archive-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "streamlit[pdf]>=1.50.0",
    "streamlit-pdf-viewer>=0.0.26",
    "pypandoc>=1.13",
    "markdown>=3.6",
    "loguru>=0.7.3",
]
